--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://drive.google.com/file/d/1P_TLfs7g3Dteis2cpFFBPB07rerewao0');
+            background-image: url('https://drive.google.com/uc?export=view&id=1P_TLfs7g3Dteis2cpFFBPB07rerewao0
+                                         ');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
