--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://drive.google.com/uc?export=view&id=1P_TLfs7g3Dteis2cpFFBPB07rerewao0
-                                         ');
+            background-image: url('https://drive.google.com/uc?export=view&id=1P_TLfs7g3Dteis2cpFFBPB07rerewao0');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -216,7 +215,7 @@
 
     <!-- Raj Sir Section -->
     <div class="raj-sir">
-        <img src="https://drive.google.com/file/d/1U3KiJBH4BAfbULV9HQByGv1B9R_Twd2g" alt="Raj Sir" class="raj-image">
+        <img src="https://drive.google.com/uc?export=view&id=1U3KiJBH4BAfbULV9HQByGv1B9R_Twd2g" alt="Raj Sir" class="raj-image">
         <div class="raj-name">Raj Sir</div>
     </div>
 
