--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            color: white;
+            color: Black;
             text-align: center;
             position: relative;
             display: flex;
