--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-          background-image: url('file:///F:/download%20from%20google/classroom-interior-with-school-desks-chairs-and-green-board-empty-school-classroom-photo.jpg');
+          background-image: url('https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s');
 
             background-size: cover;
             background-position: center;
@@ -236,7 +236,7 @@
             <h2>Geography</h2>
             <button class="show-chapters-btn" onclick="toggleChapters('geo-chapters')">Show Chapters</button>
             <ul id="geo-chapters" class="chapters-list">
-                <li class="chapter-item"><a href="https://drive.google.com/file/d/16Xd05nkSoqaiZLJm5PwMaHXm4kUax1QD/preview">Chapter 1: Climate</a></li>
+                <li class="chapter-item"><a href="#geo-chapter1" class="chapter-link">Chapter 1: Climate</a></li>
                 <li class="chapter-item"><a href="#geo-chapter2" class="chapter-link">Chapter 2: Soil</a></li>
                 <li class="chapter-item"><a href="#geo-chapter3" class="chapter-link">Chapter 3: Water Resources</a></li>
                 <li class="chapter-item"><a href="#geo-chapter4" class="chapter-link">Chapter 4: Natural Resources</a></li>
